[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/States/PlayState.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/vcr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Stages/RhythmSystem/UI/healthBar.png" type="Texture" id=3]
[ext_resource path="res://Assets/Stages/Characters/Icons/icon-dad.png" type="Texture" id=4]
[ext_resource path="res://Assets/Stages/Characters/Icons/icon-bf.png" type="Texture" id=5]
[ext_resource path="res://Assets/Stages/RhythmSystem/UI/ready_set_go_sheet.png" type="Texture" id=6]
[ext_resource path="res://Scenes/ARROWSYSTEM/StrumLine.tscn" type="PackedScene" id=7]
[ext_resource path="res://mobile_controls/Arrow_Controls.tscn" type="PackedScene" id=8]
[ext_resource path="res://mobile_controls/Pause.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=2]
resource_name = "Bop"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0.305882, 0, 0.317647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="PlayState" type="Node2D"]
script = ExtResource( 1 )
PlayerStrumPath = NodePath("HUD/PlayerStrumLine")
EnemyStrumPath = NodePath("HUD/EnemyStrumLine")
song = "fresh-bf-remix"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ratings" type="Node" parent="HUD"]

[node name="PlayerStrumLine" parent="HUD" instance=ExtResource( 7 )]
position = Vector2( 808, 88 )
scale = Vector2( 0.7, 0.7 )

[node name="EnemyStrumLine" parent="HUD" instance=ExtResource( 7 )]
position = Vector2( 113.4, 88 )
scale = Vector2( 0.7, 0.7 )

[node name="HealthBar" type="TextureProgress" parent="HUD"]
anchor_left = 0.359
anchor_top = 1.269
anchor_right = 0.359
anchor_bottom = 1.269
margin_left = -179.52
margin_top = -293.68
margin_right = 421.48
margin_bottom = -274.68
rect_scale = Vector2( 1.2, 1.2 )
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 1
tint_under = Color( 1, 0, 0, 1 )
tint_progress = Color( 0.0784314, 1, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Icons" type="Node2D" parent="HUD/HealthBar"]
position = Vector2( 300, 0 )
scale = Vector2( 1.4, 1.4 )

[node name="Enemy" type="Sprite" parent="HUD/HealthBar/Icons"]
position = Vector2( -10, 3.33334 )
scale = Vector2( 0.714, 0.714 )
texture = ExtResource( 4 )
offset = Vector2( -50, 0 )
hframes = 2

[node name="Player" type="Sprite" parent="HUD/HealthBar/Icons"]
scale = Vector2( 0.714, 0.714 )
texture = ExtResource( 5 )
offset = Vector2( 50, 0 )
flip_h = true
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/HealthBar/Icons"]
anims/Bop = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="TextBar" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 1 )
text = "Health: 0%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Node2D" parent="HUD"]
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Rating" type="Label" parent="HUD/Debug"]
margin_top = 36.0
margin_right = 1288.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 4 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RatingMS" type="Label" parent="HUD/Debug"]
margin_top = 108.0
margin_right = 1288.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 5 )
text = "10ms"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Sprite" parent="HUD"]
visible = false
position = Vector2( 640, 360 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )
hframes = 3

[node name="Arrow_Controls" parent="HUD" instance=ExtResource( 8 )]

[node name="Pause" parent="HUD" instance=ExtResource( 9 )]

[node name="Audio" type="Node2D" parent="."]

[node name="CountdownStream" type="AudioStreamPlayer" parent="Audio"]

[node name="MissStream" type="AudioStreamPlayer" parent="Audio"]

[node name="HitsoundStream" type="AudioStreamPlayer" parent="Audio"]

[node name="Positions" type="Node2D" parent="."]

[node name="Player" type="Position2D" parent="Positions"]
position = Vector2( 1030, 640 )

[node name="Enemy" type="Position2D" parent="Positions"]
position = Vector2( 241, 640 )

[node name="Girlfriend" type="Position2D" parent="Positions"]
position = Vector2( 640, 462 )

[node name="Rating" type="Position2D" parent="Positions"]
position = Vector2( 704, 384 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
smoothing_enabled = true

[node name="Characters" type="Node2D" parent="."]

[node name="Ratings" type="Node" parent="."]
